fix: support java 17 h5 dokploy startup